<resources>
    <string name="app_name">MusiCloud</string>

    <string name="songs">My Songs</string>

    <!-- fragment titles -->
    <string name="setting">Setting</string>
    <string name="profile">My Profile</string>
    <string name="report">Report a Problem</string>
    <string name="log_in">LOG IN</string>
    <string name="about">About MusiCloud</string>
    <string name="search">Search</string>
    <string name="add">Add New Song</string>
    <string name="youtube_search_result_details">Youtube Search Result Details</string>
    <string name="process">Process</string>
    <string name="help">Help</string>
    <string name="songInfo">Song Info</string>
    <string name="aboutTitle">What is MusiCloud?</string>

    <!-- button texts -->
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="import_from_file">Import From Device Storage</string>
    <string name="download_from_youtube">Download From YouTube</string>
    <string name="download">Download MP3 Offline</string>
    <string name="view_in_youtube">View Video in Youtube</string>
    <string name="close">Close</string>
    <string name="cpYoutubeLink">Copy and Paste YouTube Link</string>

    <!-- hints -->
    <string name="search_youtube">Search on YouTube</string>

    <!-- formatter -->
    <string name="title"><![CDATA[<h3>HERE IS YOUR SONG</h3>]]></string>
    <string name="created_at"><![CDATA[<b>Created On:</b>]]></string>

    <!-- test data -->
    <string name="song_name">Hotel California</string>

    <!-- player -->
    <string name="playbackTime">--:--</string>

    <!-- setting -->
    <string name="dataSaverTitle">DataSaver Mode</string>
    <string name="dataSaverDesc">Process and Download Song only when wifi is connected.</string>
    <string name="dataSaverUserAlert">DataSaver Mode is On and You are not currently connected to WIFI.</string>

    <!-- help -->
    <string name="sampleQuestion">What\'ll happen if I uninstalled the app?</string>
    <string name="sampleAnswer">If you uninstall the app, the songs will not be removed from the device, instead they will be still saved as Audio Media Item. However, the app will lose track of all the songs and the songs will not be available for the app when you install again.</string>
    <string name="contact">Contact</string>
    <string name="contactInfo">Contact Info</string>
    <string name="contactDescription">Currently, I am working on the mail service for the Contact Function and will be included in next Update.\nFor now, please contact me via\n <b>kyaw.thitlwin.me@gmail.com</b> \nwith subject, MusiCloud.\nThanks for understanding.</string>

    <string-array name="questions">
        <item>What\'ll happen if I uninstalled the app?</item>
        <item>Why can\'t I find the song after download?</item>
        <item>Why is the song process taking too long?</item>
        <item>If I reinstalled the app, will I lose my songs?</item>
        <item>I cannot find the song I like. What can I do?</item>
    </string-array>

    <string-array name="answers">
        <item>If you uninstall the app, the songs will not be removed from the device, instead they will be still saved as Audio Media Item.However, the app will lose track of all the songs and the songs will not be available for the app when you install again.</item>
        <item>I have tried to make sure that there\'s no room for error. However, once in a blue moon or in an unfortunate circumstances, some errors might still occur.Please restart the app if you encounter this situation.</item>
        <item>The song processing time is directly proportional to the duration of the Youtube Videos you have chosen. The longer the video duration, the longer processing time.Please make sure your device has a good connection or if these options do not help, kindly contact me.</item>
        <item>Yes, the songs will not be available after the re-installation. However, these songs can be played with other Audio Application (for example, built-in music app)</item>
        <item>You can copy the link of the song from YouTube and paste it in the search bar.</item>
    </string-array>

    <!-- about -->

</resources>