<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:background="@drawable/round_corner_dialog"
        android:backgroundTint="@color/milky_white">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/dialog_title_round"
            android:backgroundTint="@color/sky_blue"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/add"
                android:textSize="18sp"
                android:textColor="@color/milky_white"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/addFromLocalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/import_from_file"
            android:textColor="@color/coral"
            android:textStyle="bold"
            android:textSize="16sp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:id="@+id/addFromYouTubeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/download_from_youtube"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:textSize="16sp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addFromLocalButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>