<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.example.musicloud.youtubesearch.YoutubeSearchDetailsViewModel" />
        <variable
            name="songViewModle"
            type="com.example.musicloud.song.SongViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="15dp">

        <ImageView
            android:id="@+id/youtubeSearchResultThumbnail"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/youtube_search_result_details"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:imageUrl="@{viewModel.searchDetails.thumbnailM}"/>

        <TextView
            android:id="@+id/youtubeSearchResultTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.searchDetails.title}"
            android:textStyle="bold"
            android:textSize="20sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_margin="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/youtubeSearchResultThumbnail" />

        <TextView
            android:id="@+id/youtubeSearchResultChannelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.searchDetails.channelTitle}"
            android:textStyle="bold"
            android:textSize="17sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_margin="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/youtubeSearchResultTitle" />

        <Button
            android:id="@+id/downloadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/download"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/sky_blue_700"
            android:layout_marginTop="50dp"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/youtubeSearchResultChannelName"
            app:icon="@drawable/ic_download_foreground"
            app:iconSize="30dp"
            app:iconGravity="start" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/view_in_youtube"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/sky_blue_700"
            android:layout_margin="10dp"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/downloadButton"
            app:icon="@drawable/ic_view_foreground"
            app:iconSize="30dp"
            app:iconGravity="start" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>